Introduction chapter and start context engineering chapter

--- a/references.bib
+++ b/references.bib
@@ -16,4 +16,26 @@
   year={2020}
 }
 
+@article{qian2023chatdev,
+  title={Chatdev: Communicative agents for software development},
+  author={Qian, Chen and Liu, Wei and Liu, Hongzhang and Chen, Nuo and Dang, Yufan and Li, Jiahao and Yang, Cheng and Chen, Weize and Su, Yusheng and Cong, Xin and others},
+  journal={arXiv preprint arXiv:2307.07924},
+  year={2023}
+}
+
+@techreport{hong2025context,
+  title = {Context Rot: How Increasing Input Tokens Impacts LLM Performance},
+  author = {Hong, Kelly and Troynikov, Anton and Huber, Jeff},
+  year = {2025},
+  month = {July},
+  institution = {Chroma},
+  url = {https://research.trychroma.com/context-rot},
+}
+
+@inproceedings{yao2023react,
+  title={React: Synergizing reasoning and acting in language models},
+  author={Yao, Shunyu and Zhao, Jeffrey and Yu, Dian and Du, Nan and Shafran, Izhak and Narasimhan, Karthik and Cao, Yuan},
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2023}
+}
 
