Reflection chatper: introduction + self-correction with external feedback

--- a/references.bib
+++ b/references.bib
@@ -45,3 +45,47 @@
   journal={arXiv preprint arXiv:2206.07682},
   year={2022}
 }
+
+@article{madaan2023self,
+  title={Self-refine: Iterative refinement with self-feedback},
+  author={Madaan, Aman and Tandon, Niket and Gupta, Prakhar and Hallinan, Skyler and Gao, Luyu and Wiegreffe, Sarah and Alon, Uri and Dziri, Nouha and Prabhumoye, Shrimai and Yang, Yiming and others},
+  journal={Advances in Neural Information Processing Systems},
+  volume={36},
+  pages={46534--46594},
+  year={2023}
+}
+
+@article{huang2023large,
+  title={Large language models cannot self-correct reasoning yet},
+  author={Huang, Jie and Chen, Xinyun and Mishra, Swaroop and Zheng, Huaixiu Steven and Yu, Adams Wei and Song, Xinying and Zhou, Denny},
+  journal={arXiv preprint arXiv:2310.01798},
+  year={2023}
+}
+
+@article{chen2023teaching,
+  title={Teaching large language models to self-debug},
+  author={Chen, Xinyun and Lin, Maxwell and Sch{\"a}rli, Nathanael and Zhou, Denny},
+  journal={arXiv preprint arXiv:2304.05128},
+  year={2023}
+}
+
+@article{shinn2023reflexion,
+  title={Reflexion: Language agents with verbal reinforcement learning, 2023},
+  author={Shinn, Noah and Cassano, Federico and Labash, Beck and Gopinath, Ashwin and Narasimhan, Karthik and Yao, Shunyu},
+  journal={URL https://arxiv. org/abs/2303.11366},
+  volume={1},
+  year={2023}
+}
+
+@article{gou2023critic,
+  title={Critic: Large language models can self-correct with tool-interactive critiquing},
+  author={Gou, Zhibin and Shao, Zhihong and Gong, Yeyun and Shen, Yelong and Yang, Yujiu and Duan, Nan and Chen, Weizhu},
+  journal={arXiv preprint arXiv:2305.11738},
+  year={2023}
+}
+
+
+
+
+
+
