--- a/references.bib
+++ b/references.bib
@@ -84,6 +84,16 @@
   year={2023}
 }
 
+@inproceedings{yang2023large,
+  title={Large language models as optimizers},
+  author={Yang, Chengrun and Wang, Xuezhi and Lu, Yifeng and Liu, Hanxiao and Le, Quoc V and Zhou, Denny and Chen, Xinyun},
+  booktitle={The Twelfth International Conference on Learning Representations},
+  year={2023}
+}
+
+
+
+
 
 
 
