complete reflection chapter

--- a/reflection.ipynb
+++ b/reflection.ipynb
@@ -373,13 +373,27 @@
    "source": [
     "## LLM as Optimizers\n",
     "\n",
-    "Yang _et al._ from DeepMind showed that a LLM can even be used to optimize numerical and discrete problems, using linear regression and the traveling salesman problem as example problems [@yang2023large]. Given the _meta-prompt_, which desribe the problem, and a set of candidate solutions and their corresponding scores, the LLM can utilize in-context learning to iteratively improve its solution. Crucially, this requires an external objection function evaluator to score solutions at each iteration, which are then added to the growing set of solution-score pairs. The solution-score pairs are sorted to presumably better help the LLM identify patterns that can be used to further refine the solution. @fig-3.\n",
+    "Yang _et al._ from DeepMind showed that a LLM can be prompted to perform non-gradient optimization of numerical and discrete problems, using linear regression and the traveling salesman problem as example problems [@yang2023large]. The prompt includes a description of the problem and goal, followed by a set of candidate solutions and their corresponding scores, which the authors together refer to as the _meta-prompt_. By proposing new solutions and getting them scored, the LLM can utilize in-context learning to iterate on the problem. Crucially, this requires an external objective function evaluator to score solutions at each iteration, which are then added to the growing set of solution-score pairs. The solution-score pairs are sorted to presumably better help the LLM identify patterns that can be used to further refine the solution. See @fig-3. to see how a LLM can be used as an optimizer through prompting.\n",
     "\n",
     "![Optimization by prompting framework. Source: \"Large Language Models as Optimizers\" (https://arxiv.org/pdf/2309.03409).](./pics/llm_as_optimizer.png){#fig-3 fig-align=\"center\" width=80%}\n",
     "\n",
-    "[example prompt]\n",
+    "We can use the meta-prompt for linear regression from the paper to explain the prompt design:\n",
     "\n",
-    "[prompt optimization]"
+    "> <span style=\"color: orange\">Now you will help me minimize a function with two input variables w, b. I have some (w, b) pairs\n",
+    "and the function values at those points. The pairs are arranged in descending order based on their\n",
+    "function values, where lower values are better.</span>.\n",
+    ">\n",
+    "> <span style=\"color: blue\">input:<br>w=18, b=15<br>value:<br>10386334</span>\n",
+    "> \n",
+    "> <span style=\"color: blue\">input:<br>w=17, b=18<br>value:<br>9204724</span>\n",
+    "> \n",
+    "> <span style=\"color: orange\">Give me a new (w, b) pair that is different from all pairs above, and has a function value lower than\n",
+    "any of the above. Do not write code. The output must end with a pair [w, b], where w and b are\n",
+    "numerical values.</span>.\n",
+    "\n",
+    "In the above meta-prompt, the orange text are the instructions for linear regression and the blue text are the set of candidate solutions are the weight values $w, b$ along with their sum of squared error (presumably). \n",
+    "\n",
+    "As a more practical application, Yang _et al._ used the LLM to optimize the prompt for a given task. Specifically, the meta-prompt contains a statement that the goal is to generate a prompt (i.e. meta-instructions), examples of the output format, and past prompt-score pairs. After generation, a scorer LLM or objective function computes accuracy scores for these new prompts. The meta-prompt is then updated with the best new prompt-score pairs for further optimization."
    ]
   },
   {
