add references to reflection chapter

--- a/reflection.ipynb
+++ b/reflection.ipynb
@@ -400,6 +400,16 @@
    "cell_type": "markdown",
    "id": "3d2dcc2e-3674-4684-acb0-99fd3ffd186c",
    "metadata": {},
+   "source": [
+    "# References {.unnumbered}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bf7973c-a5d6-4a3f-a972-df73db0c3888",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
